test/should_pass/hom_006.grg
actions hom_006;

rule r {
	pattern {
		x:Node -e:Edge-> y:Node -f:Edge-> z:Node <-:Edge- zz:Node;
		hom(x, y);
		hom(z, zz);
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

